# Algos

./: .gitignore  README.md  fundamental_data_structures_and_algorithms.md  main.py  pyproject.toml
BinaryTrees/: AVLTree.py
Searching/: BinarySearch.py
Sorting/: MergeSort.py  QuickSort.py  merge_sort.py  quick_sort.py
Traversing/: BreadthFirstSearch.py  DepthFirstSearch.py
Utils/: PerformanceMetrics.py
binary_trees/: avl_tree.py  complete_binary_tree.py
searching/: binary_search.py
traversing/: breadth_first_search.py  depth_first_search.py  dijkstra.py  kruskal.py  prim.py
utils/: performance_metrics.py
